# stacky

./: .gitignore  .gitmodules  README.md  handoff.md  pyproject.toml
configs/: stacky.example.toml
data/stacky/: soul.yaml
docs/: ARCHITECTURE.md  FIRMWARE.md  OFFICIAL_FIRMWARE_MIGRATION.md  SANDCODE_PROTOCOL.md
firmware/stacky_cores3/: platformio.ini
firmware/stacky_cores3/include/: wifi_secrets.example.h
patches/official-stackchan/: 0001-stacky-bridge.patch
scripts/: apply-official-firmware-patch.ps1  flash-stackchan-firmware.ps1  mic_listener.py  serial_log.py
src/stacky/: __init__.py  brain.py  cli.py  computer.py  config.py  danish.py  evolution.py  home_assistant.py  llm.py  memory.py  memory_map.py  monitor.py  orchestrator.py  personality.py  runtime_state.py  sandcode.py  sessions.py  soul.py  vision.py  websearch.py
test/: index.html  script.js  styles.css
test/.playwright-mcp/: page-2026-05-18T20-06-38-391Z.yml
tests/: test_audio_channels.py  test_body_calibration.py  test_body_controller.py  test_body_director.py  test_body_protocol.py  test_brain_memory_context.py  test_computer.py  test_config.py  test_danish.py  test_evolution.py  test_handsfree_helpers.py  test_llm.py  test_memory.py  test_memory_map.py  test_monitor.py  test_personality.py  test_piper_tts.py  test_roest_tts.py  test_runtime_state.py  test_sandcode.py  test_sessions.py  test_soul.py  test_speech_adapter.py  test_stt.py  test_stt_eval.py  test_supertonic_tts.py  test_transcript_correction.py  test_turn_detection.py  test_vision.py  test_voice_output.py  test_websearch.py
(+21 files in other folders)
