[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "stacky"
version = "0.1.0"
description = "Stacky: a local Danish AI friend for M5Stack StackChan."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "python-slugify>=8.0",
]

[project.optional-dependencies]
voice = [
  "pipecat-ai>=0.0.86",
  "websockets>=13.0",
  "piper-tts>=1.3.0",
  "faster-whisper>=1.2.1",
  "transformers>=5.0",
  "torch>=2.6.0",
  "pyctcdecode>=0.5.0",
  "kenlm>=0.3.0",
  "supertonic>=1.2.3",
]
roest = [
  "chatterbox-tts==0.1.7",
  "torchaudio==2.6.0",
  "soundfile>=0.13.1",
  "setuptools<81",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
stacky = "stacky.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stacky"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
